--- a/HOME/marching-cubes/Makefile
+++ b/HOME/marching-cubes/Makefile
@@ -6,7 +6,7 @@ INCLUDE := lib
 
 CXXFLAGS = -Wall -Wextra -O2 -g -std=c++11
 CPPFLAGS = $(foreach dir,$(INCLUDE),-I../$(dir))
-LDFLAGS  = -lglut -lGLEW -lGL -pthread
+LDFLAGS  = -lglut -lGLEW -lGL -pthread  -L/usr/lib/nvidia-375 
 ##############################################################################
 .SUFFIXES:
 .SECONDARY:
